manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: cilist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: rumi87/backend:5.0
          ports:
            - containerPort: 3000
          volumeMounts:
          - name: config-env
            mountPath: /app/.env
            subPath: .env
      volumes:
      - name: config-env
        configMap:
          name: cilist-configmap
