manifests/frontend-deployment.yaml
# Deployment untuk frontend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: cilist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: rumi87/frontend:4.0
          ports:
            - containerPort: 3000
