manifests/backend-service.yaml
# Service untuk backend
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: cilist
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
