manifests/frontend-service.yaml
# Service untuk frontend
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: cilist
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
